--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "registry": "https://npm.pkg.github.com/"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "browser-sync": "^2.26.7",
         "del": "^5.1.0",
+        "gridstack": "^5.0.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^7.0.1",
         "gulp-clean-css": "^4.3.0",
@@ -43,10 +45,11 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "^2.0.0",
         "gulp-uglify": "^3.0.2",
-        "huebee": "^2.1.0",
+        "huebee": "^2.1.1",
         "jquery": "^3.5.0",
         "merge-stream": "^2.0.0",
         "node-gyp": "^7.0.0",
+        "sb-admin-2": "^3.3.8",
         "startbootstrap-sb-admin-2": "4.0.7"
     },
     "devDependencies": {
